fix misaligned fields

--- a/calculators/block-wall/template.html
+++ b/calculators/block-wall/template.html
@@ -14,7 +14,7 @@
 						<option value="1">Feet</option>
 						<option value="12">Inch</option>
 					</select>
-					<input tabindex="2000" type="number" step=".001" name="width" formnovalidate />
+					<input tabindex="2000" type="number" step=".001" name="height" formnovalidate />
 				</div>
 			</label>
 		</div>
