--- a/calculators/column/template.html
+++ b/calculators/column/template.html
@@ -14,7 +14,7 @@
 						<option value="1">Feet</option>
 						<option value="12">Inch</option>
 					</select>
-					<input tabindex="2000" type="number" step=".001" name="width" formnovalidate />
+					<input tabindex="2000" type="number" step=".001" name="height" formnovalidate />
 				</div>
 			</label>
 		</div>
@@ -26,7 +26,7 @@
 						<option value="1">Feet</option>
 						<option value="12" selected="selected">Inch</option>
 					</select>
-					<input tabindex="2001" type="number" step=".001" name="length" formnovalidate />
+					<input tabindex="2001" type="number" step=".001" name="diameter" formnovalidate />
 				</div>
 			</label>
 		</div>
